# genedex

./: .todo  Cargo.toml  README.md  ROADMAP.md  debug.txt  genedex.todo
.github/workflows/: rust.yml
examples/: basic_usage.rs  cursor.rs  custom_alphabet.rs  text_with_rank_support.rs
proptest-regressions/: sampled_suffix_array.txt
proptest-regressions/construction/: bwt.txt
proptest-regressions/text_with_rank_support/: mod.txt
src/: alphabet.rs  batch_computed_cursors.rs  config.rs  construction.rs  cursor.rs  lib.rs  lookup_table.rs  naive_occurrence_table.rs  occurrence_table.rs  sampled_suffix_array.rs  string_rank.rs  text_id_search_tree.rs  text_with_rank_support.rs
src/construction/: bwt.rs  mod.rs  slice_compression.rs
src/text_with_rank_support/: block.rs  condensed.rs  flat.rs  mod.rs
tests/: fmindex.proptest-regressions  fmindex.rs  fmindex_basic.rs  text_with_rank_support.proptest-regressions  text_with_rank_support.rs  text_with_rank_support_proptest.proptest-regressions  text_with_rank_support_proptest.rs
