[package]
name = "genedex"
version = "0.1.0"
authors = ["Felix Leander Droop <info@felix-droop.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/feldroop/genedex"
documentation = "https://docs.rs/genedex"
homepage = "https://github.com/feldroop/genedex"
description = "A small and fast FM-Index implementation"
categories = [
    "science::bioinformatics",
    "science::bioinformatics::sequence-analysis",
    "text-processing",
    "algorithms",
    "data-structures",
]
keywords = ["fmindex", "fm-index", "bioinformatics", "bio", "text-index"]
edition = "2024"

[dependencies]
libsais = "0.2.0"
num-traits = "0.2.19"
rayon = "1.11"
bytemuck = "1.23.2"
bitvec = "1"
savefile = { version = "0.20", optional = true, features = ["derive"] }
memchr = "2.7"

[dev-dependencies]
proptest = "1.6.0"
rand = "0.9.0"
rand_chacha = "0.9.0"

[features]
default = ["savefile"]
savefile = ["dep:savefile"]

# optimize code for faster proptesting (needs to be removed when debugging tests)
[profile.test]
opt-level = 3
